--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,28 +1,33 @@
 {
   "expo": {
-    "name": "MapViewELocation",
-    "slug": "MapViewELocation",
+    "name": "LocationEMapView",
+    "slug": "LocationEMapView",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": ["**/*"]
+  },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+      "package": "com.example.locationemapview"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "plugins": [
+      [
+        "react-native-maps",
+        {
+          "config": {
+            "googleMaps": true
+          }
+        }
+      ]
+    ]
   }
-}
