--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
     "react-native": "0.76.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/node": "^22.9.3",
     "@types/react": "~18.3.12",
     "@types/react-leaflet": "^2.8.3",
     "typescript": "^5.3.3"
